--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header class='page-header'>
+        <h1>Hello World</h1>
         <h4>The Mood Shop</h4>
         <nav>
           <ul>
